[project]
name = "rab_q"
version = "1.0.0"
description = "Enterprise-Grade Messaging SDK for RabbitMQ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aio-pika>=9.4.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mq = "rab_q.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
